# cortex

./: .env.example  .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tasks.md  turbo.json
.github/workflows/: ci.yml
Antigravity/: agy.md  db.md  design.md  rule.md  skill.md
apps/backend/: celery_app.py  main.py  pyproject.toml
apps/backend/data/chromadb/: chroma.sqlite3
apps/backend/middleware/: auth.py  request_id.py
apps/backend/prompts/: synthesis_prompt.txt
apps/backend/routers/: chat.py  graph.py  ingest.py  jobs.py  memories.py  plates.py  search.py  syllabus.py
apps/backend/schemas/: base.py  ingest.py
apps/backend/services/: clustering_service.py  embedding_service.py  graph_service.py  pdf_service.py  rag_service.py  search_service.py  storage_service.py  thumbnail_service.py  transcription_service.py  vision_service.py
apps/backend/services/processors/: audio_processor.py  image_processor.py  pdf_processor.py  synthesis_service.py  video_processor.py
apps/backend/services/scrapers/: base_scraper.py  instagram_scraper.py  web_scraper.py
apps/backend/tests/: test_embedding_service.py
apps/backend/utils/: errors.py  supabase_client.py
apps/backend/workers/: cluster_task.py  graph_task.py  process_memory.py  recluster_task.py
apps/extension/: manifest.json  package.json
apps/frontend/: index.html  package.json
apps/frontend/src/: index.css  main.jsx  router.jsx
apps/frontend/src/components/: AddContentPanel.jsx  MemoryCard.jsx  PlateCard.jsx  ProtectedRoute.jsx
apps/frontend/src/contexts/: AuthContext.jsx
supabase/: setup_notes.sql
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 001_user_memories.sql  002_entity_relationships.sql  003_learning_paths.sql  004_plates.sql  005_memory_plates.sql  006_job_tracking.sql
(+17 files in other folders)
