[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Cortex"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "chromadb>=0.4.0",
    "PyJWT>=2.8.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "python-magic-bin>=0.4.14",
    "python-slugify>=8.0.4",
    "yt-dlp>=2023.11.16",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "httpx",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.hatch.build.targets.wheel]
packages = ["."]

